[metadata]
name = python-xlib
version = attr: Xlib.__version_string__
description = Python X Library
long_description = file: README.rst
download_url = https://github.com/python-xlib/python-xlib/releases
url = https://github.com/python-xlib/python-xlib
license = LGPLv2+
author = Peter Liljenberg
author_email = petli@ctrl-c.liu.se
keywords =
	windows
	x
	x11
	xlib
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: X11 Applications
	Intended Audience :: Developers
	License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: User Interfaces

[bdist_wheel]
universal = 1

# vim: list
